# ftransfer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ftransfer.cmd  ftransfer.ps1  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: profiles.example.json
src/scp_browser/: __init__.py  app.py  config.py  download_manager.py  models.py  profile_manager.py  screens.py  secrets.py  ssh_client.py
