[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ftransfer"
version = "0.1.0"
description = "Keyboard-driven TUI browser for remote SSH/SFTP downloads"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.58,<0.70",
  "paramiko>=3.4,<4.0",
  "keyring>=25.0,<26.0",
  "platformdirs>=4.2,<5.0",
]

[project.scripts]
ftransfer = "scp_browser.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
